Create Index.html for Sweet Food Stories website
Added basic structure and content for the Sweet Food Stories website.

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sweet Food Stories</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <header>
+        <h1>Sweet Food Stories</h1>
+        <p>Where every recipe has a story.</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">Stories</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section class="intro">
+        <h2>Welcome to Sweet Food Stories</h2>
+        <p>
+            This website celebrates the joy of cooking and the stories behind every dish. 
+            Explore recipes, read personal food stories, and discover new flavors.
+        </p>
+
+        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" 
+             alt="Delicious dessert" class="main-image">
+    </section>
+
+    <footer>
+        <p>© 2026 Sweet Food Stories – Created by Mario</p>
+    </footer>
+
+</body>
+</html>
 
