Revise About page content and structure
Updated the content and structure of the About page to reflect the mission and vision of Sweet Food Stories.

--- a/about.html
+++ b/about.html
@@ -9,43 +9,35 @@
 
 <body>
 
-<header>
-    <h1>About Sweet Food Stories</h1>
-</header>
+    <header>
+        <h1>About Sweet Food Stories</h1>
+        <p>The heart behind every recipe.</p>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="Index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="stories.html">Stories</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="stories.html">Stories</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-<section class="intro">
-    <h2>Our Story</h2>
-    <p>
-        Sweet Food Stories is a website created to celebrate the joy of cooking and the stories behind every recipe. 
-        Every dish has a memory, a moment, or a person connected to it, and this project brings those stories to life 
-        through simple, warm, and inviting design.
-    </p>
+    <section class="intro">
+        <h2>Our Mission</h2>
+        <p>
+            Sweet Food Stories was created to celebrate the connection between food and memories. 
+            Every dish has a story, and every story brings people together.
+        </p>
 
-    <p>
-        The purpose of this website is to share recipes, personal food memories, and cultural traditions in a way that 
-        feels friendly and meaningful. Whether it’s a dessert passed down through generations or a new recipe discovered 
-        by accident, each story adds flavor to the experience.
-    </p>
+        <img src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0"
+             alt="Cooking ingredients" class="main-image">
+    </section>
 
-    <p>
-        This project was created as part of a web design course, and it reflects my interest in combining storytelling 
-        with food culture. The goal is to make visitors feel inspired, connected, and hungry for more.
-    </p>
-</section>
-
-<footer>
-    <p>© 2026 Sweet Food Stories – Created by Mario</p>
-</footer>
+    <footer>
+        <p>© 2026 Sweet Food Stories – Created by Mario</p>
+    </footer>
 
 </body>
 </html>
