--- a/recipes.html
+++ b/recipes.html
@@ -9,40 +9,32 @@
 
 <body>
 
-<header>
-    <h1>Recipes</h1>
-</header>
+    <header>
+        <h1>Recipes</h1>
+        <p>Delicious dishes to inspire your kitchen.</p>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="Index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="stories.html">Stories</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="stories.html">Stories</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-<section class="intro">
-    <h2>Featured Recipes</h2>
-    <p>
-        Explore a collection of sweet and comforting recipes from around the world. 
-        Each dish is simple, delicious, and connected to a personal story.
-    </p>
+    <section class="intro">
+        <h2>Featured Recipes</h2>
+        <p>Explore a collection of sweet and savory creations.</p>
 
-    <h3>Chocolate Cake</h3>
-    <p>A classic dessert that brings warmth and joy to any celebration.</p>
+        <img src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e"
+             alt="Recipe image" class="main-image">
+    </section>
 
-    <h3>Strawberry Cheesecake</h3>
-    <p>A creamy and refreshing treat perfect for summer days.</p>
-
-    <h3>Homemade Cookies</h3>
-    <p>Soft, sweet, and full of childhood memories.</p>
-</section>
-
-<footer>
-    <p>© 2026 Sweet Food Stories – Created by Mario</p>
-</footer>
+    <footer>
+        <p>© 2026 Sweet Food Stories – Created by Mario</p>
+    </footer>
 
 </body>
 </html>
