Revise header, nav, and intro sections in stories.html

--- a/stories.html
+++ b/stories.html
@@ -9,46 +9,34 @@
 
 <body>
 
-<header>
-    <h1>Food Stories</h1>
-</header>
+    <header>
+        <h1>Food Stories</h1>
+        <p>Memories served with flavor.</p>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="Index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="stories.html">Stories</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="stories.html">Stories</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-<section class="intro">
-    <h2>Stories Behind the Recipes</h2>
-    <p>
-        Every recipe has a memory behind it — a family moment, a celebration, or a tradition. 
-        Sweet Food Stories highlights the emotions and experiences that make each dish meaningful.
-    </p>
+    <section class="intro">
+        <h2>Stories Behind the Dishes</h2>
+        <p>
+            Every recipe has a memory attached — family gatherings, celebrations, or quiet moments.
+        </p>
 
-    <h3>Grandma’s Chocolate Cake</h3>
-    <p>
-        A recipe passed down through generations, always baked for birthdays and special occasions.
-    </p>
+        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836"
+             alt="Food story" class="main-image">
+    </section>
 
-    <h3>Sunday Morning Pancakes</h3>
-    <p>
-        A simple tradition that brings comfort and warmth to the start of the week.
-    </p>
-
-    <h3>Holiday Cookies</h3>
-    <p>
-        A yearly ritual filled with laughter, music, and the smell of cinnamon.
-    </p>
-</section>
-
-<footer>
-    <p>© 2026 Sweet Food Stories – Created by Mario</p>
-</footer>
+    <footer>
+        <p>© 2026 Sweet Food Stories – Created by Mario</p>
+    </footer>
 
 </body>
 </html>
