Revise contact.html structure and content
Updated contact page with new header and footer content.

--- a/contact.html
+++ b/contact.html
@@ -9,40 +9,34 @@
 
 <body>
 
-<header>
-    <h1>Contact</h1>
-</header>
+    <header>
+        <h1>Contact</h1>
+        <p>We’d love to hear from you.</p>
+    </header>
 
-<nav>
-    <ul>
-        <li><a href="Index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="recipes.html">Recipes</a></li>
-        <li><a href="stories.html">Stories</a></li>
-        <li><a href="contact.html">Contact</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="stories.html">Stories</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
-<section class="intro">
-    <h2>Get in Touch</h2>
-    <p>
-        Have a recipe, story, or sweet memory you’d like to share? 
-        Sweet Food Stories is always open to new ideas and inspiration.
-    </p>
+    <section class="intro">
+        <h2>Get in Touch</h2>
+        <p>
+            Have a recipe to share or a story to tell? Reach out anytime!
+        </p>
 
-    <p>
-        You can reach out anytime through the contact form that will be added soon, 
-        or by sending a message through our social platforms.
-    </p>
+        <img src="https://images.unsplash.com/photo-1525182008055-f88b95ff7980"
+             alt="Contact" class="main-image">
+    </section>
 
-    <p>
-        Thank you for visiting and being part of this delicious journey!
-    </p>
-</section>
-
-<footer>
-    <p>© 2026 Sweet Food Stories – Created by Mario</p>
-</footer>
+    <footer>
+        <p>© 2026 Sweet Food Stories – Created by Mario</p>
+    </footer>
 
 </body>
 </html>
