Fix image source in index.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             Explore recipes, read personal food stories, and discover new flavors.
         </p>
 
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" 
+        <!-- Cuando tengas tus fotos, reemplaza esta imagen -->
+        <img src="images/cheesecake.jpg" 
              alt="Delicious dessert" class="main-image">
+
+        <a href="recipes.html" class="btn">Explore Recipes</a>
     </section>
 
     <footer>
@@ -41,4 +44,3 @@
 
 </body>
 </html>
-
