Enhance content in about.html with new section
Expanded the mission statement and added a new section about the significance of food stories.

--- a/about.html
+++ b/about.html
@@ -28,11 +28,23 @@
         <h2>Our Mission</h2>
         <p>
             Sweet Food Stories was created to celebrate the connection between food and memories. 
-            Every dish has a story, and every story brings people together.
+            Every dish has a story, and every story brings people together. This space is dedicated 
+            to sharing the flavors, traditions, and sweet moments that make each recipe special.
         </p>
 
-        <img src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0"
+        <!-- Cuando tengas tus fotos, reemplaza esta imagen -->
+        <img src="images/flan.jpg" 
              alt="Cooking ingredients" class="main-image">
+    </section>
+
+    <section class="intro">
+        <h2>Why Sweet Food Stories?</h2>
+        <p>
+            Food is more than ingredients and instructions — it’s culture, family, and emotion. 
+            Whether it’s a dessert passed down through generations or a new recipe discovered by 
+            accident, every dish carries a memory worth sharing. Sweet Food Stories brings those 
+            memories to life.
+        </p>
     </section>
 
     <footer>
