Add multiple dessert recipes to recipes.html

--- a/recipes.html
+++ b/recipes.html
@@ -26,10 +26,55 @@
 
     <section class="intro">
         <h2>Featured Recipes</h2>
-        <p>Explore a collection of sweet and savory creations.</p>
+        <p>Explore a collection of sweet creations made with love.</p>
+    </section>
 
-        <img src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e"
-             alt="Recipe image" class="main-image">
+    <!-- FLAN -->
+    <section class="recipe-card">
+        <img src="images/flan.jpg" alt="Flan">
+        <h2>Flan</h2>
+        <p>A classic creamy dessert with caramel flavor and a smooth texture.</p>
+        <a href="#" class="btn">View Recipe</a>
+    </section>
+
+    <!-- TRES LECHES CAKE -->
+    <section class="recipe-card">
+        <img src="images/tresleches.jpg" alt="Tres Leches Cake">
+        <h2>Tres Leches Cake</h2>
+        <p>A soft and moist cake soaked in three types of milk, topped with whipped cream.</p>
+        <a href="#" class="btn">View Recipe</a>
+    </section>
+
+    <!-- PUMPKIN CAKE -->
+    <section class="recipe-card">
+        <img src="images/calabaza.jpg" alt="Pumpkin Cake">
+        <h2>Pumpkin Cake</h2>
+        <p>A warm and spiced pumpkin-based cake perfect for any season.</p>
+        <a href="#" class="btn">View Recipe</a>
+    </section>
+
+    <!-- COOKIES -->
+    <section class="recipe-card">
+        <img src="images/galletas.jpg" alt="Cookies">
+        <h2>Cookies</h2>
+        <p>Soft, sweet cookies with a homemade flavor that everyone loves.</p>
+        <a href="#" class="btn">View Recipe</a>
+    </section>
+
+    <!-- QUESITOS -->
+    <section class="recipe-card">
+        <img src="images/quesitos.jpg" alt="Quesitos">
+        <h2>Quesitos</h2>
+        <p>A flaky pastry filled with sweet cream cheese, a Caribbean favorite.</p>
+        <a href="#" class="btn">View Recipe</a>
+    </section>
+
+    <!-- DULCE DE PAPAYA -->
+    <section class="recipe-card">
+        <img src="images/papaya.jpg" alt="Dulce de Papaya">
+        <h2>Dulce de Papaya</h2>
+        <p>A traditional dessert made with ripe papaya cooked in sweet syrup.</p>
+        <a href="#" class="btn">View Recipe</a>
     </section>
 
     <footer>
