Add new section for 'Sweet Moments' stories

--- a/stories.html
+++ b/stories.html
@@ -28,10 +28,20 @@
         <h2>Stories Behind the Dishes</h2>
         <p>
             Every recipe has a memory attached — family gatherings, celebrations, or quiet moments.
+            These stories bring each dish to life and connect us through flavor and tradition.
         </p>
 
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836"
+        <!-- Cuando tengas tus fotos, reemplaza esta imagen -->
+        <img src="images/flan.jpg" 
              alt="Food story" class="main-image">
+    </section>
+
+    <section class="intro">
+        <h2>Sweet Moments</h2>
+        <p>
+            From childhood desserts to new creations, each dish carries a piece of our history.
+            Sweet Food Stories celebrates those moments and the flavors that shaped them.
+        </p>
     </section>
 
     <footer>
