--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,26 @@
             Have a recipe to share or a story to tell? Reach out anytime!
         </p>
 
-        <img src="https://images.unsplash.com/photo-1525182008055-f88b95ff7980"
+        <!-- Cuando tengas tus fotos, reemplaza esta imagen -->
+        <img src="images/galletas.jpg" 
              alt="Contact" class="main-image">
+    </section>
+
+    <section class="intro">
+        <h2>Send a Message</h2>
+        <form action="#" method="post" class="contact-form">
+
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your name">
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your email">
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" placeholder="Write your message here"></textarea>
+
+            <button type="submit" class="btn">Send</button>
+        </form>
     </section>
 
     <footer>
