--- a/recipes.html
+++ b/recipes.html
@@ -47,7 +47,7 @@
 
     <!-- PUMPKIN CAKE -->
     <section class="recipe-card">
-        <img src="calabaza.jpg" alt="Pumpkin Cake">
+        <img src=calabaza.jpg alt="Pumpkin Cake">
         <h2>Pumpkin Cake</h2>
         <p>A warm and spiced pumpkin-based cake perfect for any season.</p>
         <a href="#" class="btn">View Recipe</a>
