Update image paths in recipe cards

--- a/recipes.html
+++ b/recipes.html
@@ -31,7 +31,7 @@
 
     <!-- FLAN -->
     <section class="recipe-card">
-        <img src="images/flan.jpg" alt="Flan">
+        <img src=flan.jpg alt="Flan">
         <h2>Flan</h2>
         <p>A classic creamy dessert with caramel flavor and a smooth texture.</p>
         <a href="#" class="btn">View Recipe</a>
@@ -39,7 +39,7 @@
 
     <!-- TRES LECHES CAKE -->
     <section class="recipe-card">
-        <img src="images/tresleches.jpg" alt="Tres Leches Cake">
+        <img src=tresleches.jpg alt="Tres Leches Cake">
         <h2>Tres Leches Cake</h2>
         <p>A soft and moist cake soaked in three types of milk, topped with whipped cream.</p>
         <a href="#" class="btn">View Recipe</a>
@@ -55,7 +55,7 @@
 
     <!-- COOKIES -->
     <section class="recipe-card">
-        <img src="images/galletas.jpg" alt="Cookies">
+        <img src=galletas.jpg alt="Cookies">
         <h2>Cookies</h2>
         <p>Soft, sweet cookies with a homemade flavor that everyone loves.</p>
         <a href="#" class="btn">View Recipe</a>
@@ -63,7 +63,7 @@
 
     <!-- QUESITOS -->
     <section class="recipe-card">
-        <img src="images/quesitos.jpg" alt="Quesitos">
+        <img src=quesitos.jpg alt="Quesitos">
         <h2>Quesitos</h2>
         <p>A flaky pastry filled with sweet cream cheese, a Caribbean favorite.</p>
         <a href="#" class="btn">View Recipe</a>
@@ -71,7 +71,7 @@
 
     <!-- APPLE MUFFIN -->
     <section class="recipe-card">
-        <img src="images/apple-muffin.jpg" alt="Apple Muffin">
+        <img src=apple-muffin.jpg alt="Apple Muffin">
         <h2>Apple Muffin</h2>
         <p>A soft and fluffy muffin with apple chunks and a warm touch of cinnamon.</p>
         <a href="#" class="btn">View Recipe</a>
