--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact page for Sweet Food Stories">
+    <meta name="keywords" content="contact, recipes, stories, food">
     <title>Contact – Sweet Food Stories</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,36 +26,39 @@
         </ul>
     </nav>
 
-    <section class="intro">
-        <h2>Get in Touch</h2>
-        <p>
-            Have a recipe to share or a story to tell? Reach out anytime!
-        </p>
+    <main>
 
-        <!-- Cuando tengas tus fotos, reemplaza esta imagen -->
-        <img src="images/galletas.jpg" 
-             alt="Contact" class="main-image">
-    </section>
+        <section class="intro">
+            <h2>Get in Touch</h2>
+            <p>Have a recipe to share or a story to tell? Reach out anytime!</p>
 
-    <section class="intro">
-        <h2>Send a Message</h2>
-        <form action="#" method="post" class="contact-form">
+            <img src="images/galletas.jpg" 
+                 alt="Cookies on a plate" class="main-image">
+        </section>
 
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Your name">
+        <section class="form-section">
+            <h2>Send a Message</h2>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Your email">
+            <form action="#" method="post" class="contact-form">
 
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" placeholder="Write your message here"></textarea>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your name">
 
-            <button type="submit" class="btn">Send</button>
-        </form>
-    </section>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email">
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Write your message here"></textarea>
+
+                <button type="submit" class="btn">Send</button>
+            </form>
+        </section>
+
+    </main>
 
     <footer>
-        <p>© 2026 Sweet Food Stories – Created by Mario</p>
+        <p>© 2026 Sweet Food Stories</p>
+        <p>Mario Vargas – Mariovargas@asu.edu</p>
     </footer>
 
 </body>
